# HawkHacks-Portal

./: LICENSE
hawkhacks_portal_backend/: .env  Cargo.toml
hawkhacks_portal_backend/migrations/2023-01-20-020834_team/: up.sql
hawkhacks_portal_backend/migrations/2023-01-20-021300_participant/: up.sql
hawkhacks_portal_backend/migrations/2023-01-20-022408_team_invite/: down.sql  up.sql
hawkhacks_portal_backend/src/: custom_types.rs  main.rs  schema.rs  security_questions.rs
hawkhacks_portal_backend/src/database/: db.rs
hawkhacks_portal_backend/src/models/: migration.rs  mod.rs  participant.rs  team.rs  team_invite.rs
hawkhacks_portal_backend/src/warp/: mod.rs  webserver.rs  websocket.rs
