[package]
name = "hawkhacks_portal_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.2", features = ["postgres", "r2d2"] }
diesel_migrations = "2.0.0"
futures = "0.3.25"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
simple_logger = "4.0.0"
tokio = { version = "1.24.2", features = ["full"] }
tokio-stream = "0.1.11"
warp = "0.3.3"
